# Suntek

./: .gitignore  .prettierrc  MANIFEST.in  README.md  Session.vim  changelog.md  order_duplicate.py  package.json  pyproject.py.toml  pyproject.toml  pyrightconfig.json  ruff.toml  setup.py  test.py-E
.github/workflows/: ci.yml
api/sales_dashboard/: sales_order.py
custom_script/: quotation.py
dashboard/: README.md  index.html  package-lock.json  package.json  proxyOptions.ts  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  main.tsx
suntek_app/: hooks.py  modules.txt  patches.txt
suntek_app/api/: channel_partner.py  just_dial.py  lead.py  solar_ambassador.py  webhook_handler.py
suntek_app/channel_partner/: __init__.py
suntek_app/config/: desktop.py  docs.py
suntek_app/custom_script/: address.py  bom.py  delivery_note.py  employee.py  installation_note.py  item_price.py  lead.py  opportunity.js  opportunity.py  price_list.py  quotation.py  salary_slip.py
suntek_app/event_handlers/: sales_order_event_handler.py
suntek_app/fixtures/: client_script.json  custom_docperm.json  custom_field.json  docperm.json  hd_ticket_template.json  hd_ticket_type.json  lead_source.json  module_profile.json  notification.json  print_format.json  property_setter.json  report.json  role.json  server_script.json  stock_entry_type.json  warehouse_type.json  web_form.json  webhook.json  workflow.json  workflow_state.json
suntek_app/fixtures.bak/: hd_ticket_template.json  print_format.json  property_setter.json  webhook.json  workflow_action_master.json
suntek_app/install/: __init__.py
suntek_app/migrate/: __init__.py  disable.py  enable.py  roles.py  setup_project_boilerplate.py  setup_suntek_project_automation_boilerplate.py  (+1 more)
suntek_app/overrides/: item.py  (+6 more)
(+458 files in other folders)
